# directory-watch

./: README.md  directory-watch.cabal
src/: Main.hs
